@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST after_commit-1.0.6.gem 8192 RMD160 fd950b3570674c64213c668261aa16e253b8eb4e SHA1 66189a20abe5ce6a6c180c19ff4082ce57e00802 SHA256 b0df8a49574565d99beaf4763e9e1e011240f805cee5afd4434131da8ac8fa68
 DIST after_commit-1.0.7.gem 9728 RMD160 e6685dcec13d738617400f1926d11383f82193cb SHA1 f47ae834717c2b94eb234f634fc9e47d0dbf294b SHA256 bd958737977a82f91e50b476889bafac936197b4c78d4a51a3e3acca387fa2f8
+DIST after_commit-1.0.8.gem 10240 RMD160 2945ff9f56461497c44eb1c3c970c0d7a4abbda3 SHA1 318ad9a100d44018084241d7554e338036330869 SHA256 b213baa50055ffc21329b48a5d8f736acec117269d3d58307fcad1e5b5f3e706
 EBUILD after_commit-1.0.6.ebuild 740 RMD160 5f94ed78c469bdfc74a75e19348451258b91c34d SHA1 3cfce611cfaf5ebcc62d2b5a3b35cdf38451de96 SHA256 5ff7fe5ba7ef109f2fbe8620c99ecb4fdf38734585a3177e6e1509a6b35b6e7b
 EBUILD after_commit-1.0.7.ebuild 703 RMD160 223e67a2dd9f24835af1cdcfe840f81df96ae06c SHA1 4c7bf8fc59846b01a5b422cac3bbd34c775a8374 SHA256 18348f03e09164a17edd75e0f9c967dac25ca7c352dc0a8724c128f82f45eab6
-MISC ChangeLog 694 RMD160 dfc2bd245b341545769d7c69ae74d2e5c185aa33 SHA1 22c0180197646077bde69df7aef8c2935cd1916f SHA256 06882b5e5bae8e84a3c6df020c3bbd7d773f9ab1e6616aa5820c4167cd4ce94f
+EBUILD after_commit-1.0.8.ebuild 697 RMD160 c8e9e9eeb29773b6fcb9d593df3cc0e0369dfd18 SHA1 f5dc9a37e9c864c49a95da49a02af0c690d923d0 SHA256 42285be0a109e870431b77d9cb33b84e323983b985f7ddd29d4959c39dc3f45a
+MISC ChangeLog 826 RMD160 6d6033eefc4855c4c927d0d46a46d258edf2d5e5 SHA1 82b89a269764b957289f655ca48562aee2c9d772 SHA256 9c75cab0727d66b516953393c97fe4e48f316fb64bb255c8db996e4be4b41176
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkw3LQYACgkQZihJkut28StaewEAtYDEceWB/kVemm364eM93sKx
-CJQlpHwe5XZdU5T38G4A/013vUaijRlthor/THG6Mek385U9LyHFA7UZFg2pqNKy
-=kW6z
+iF4EAREIAAYFAkybYIUACgkQZihJkut28StLQQD6AmMWl1Zh9XShySC4LZz8R/3M
+BvTZ75W+te3Lobbmf48BAJ9KA9vZ+/P0EEA/Ay/ov/zGiywB4hKUq5c5yjgl8reg
+=Uuup
 -----END PGP SIGNATURE-----
